# curso-langchain-qa-documents

./: .gitignore  README.md  app.py  ingest2.py  pyproject.toml  regulon.db
data/: EvidenceSet.tsv  GeneProductSet.tsv  OperonSet.tsv  PromoterSet.tsv  RISet.tsv  RegulatorSet.tsv  TFSet.tsv  TUSet.tsv  TerminatorSet.tsv
notebooks/: agente_sql.ipynb  agents_csv.ipynb  chatbot.ipynb  regulon.db
